# up-actual

./: .dockerignore  .env  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile-install.mk  Makefile-test.mk  README.md  compose.yaml  crontab  hello.py  pyproject.toml
.github/workflows/: ci.yaml
schemas/: accounts.schema.json  transactions.schema.json
tests/: conftest.py  test_api.py  test_app.py  test_categories.py  test_classes.py  test_ping.py  test_schemas.py  test_transactions.py  test_utils.py
up/: api.py  app.py  categories.py  classes.py  config.py  logger.py  transactions.py  utils.py
